--- a/Apq_LocalTools/Apq_LocalTools/Apq_LocalTools.csproj
+++ b/Apq_LocalTools/Apq_LocalTools/Apq_LocalTools.csproj
@@ -193,6 +193,12 @@
     <Compile Include="Forms\MainOption.Designer.cs">
       <DependentUpon>MainOption.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\FSRename.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FSRename.Designer.cs">
+      <DependentUpon>FSRename.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GlobalObject.cs" />
     <Compile Include="MainForm.cs">
@@ -241,6 +247,10 @@
   <ItemGroup>
     <EmbeddedResource Include="Forms\MainOption.resx">
       <DependentUpon>MainOption.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FSRename.resx">
+      <DependentUpon>FSRename.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <SubType>Designer</SubType>
