--- a/TreeListView/APIs/APIs2002.csproj
+++ b/TreeListView/APIs/APIs2002.csproj
@@ -184,8 +184,7 @@
   <PropertyGroup>
     <PreBuildEvent>
     </PreBuildEvent>
-    <PostBuildEvent>if "%25Reference%25" == "" goto End
-:xcopy "%25Reference%25\Res\$(ProjectName)" "$(TargetDir)Res\" /c /q /g /h /r /k /y /e
+    <PostBuildEvent>:xcopy "%25Reference%25\Res\$(ProjectName)" "$(TargetDir)Res\" /c /q /g /h /r /k /y /e
 
 xcopy "$(TargetPath)" "%25Reference%25\TreeListView\" /c /q /g /h /r /k /y
 xcopy "$(TargetDir)$(TargetName).xml" "%25Reference%25\TreeListView\" /c /q /g /h /r /k /y
