--- a/ApqDBManager/ApqDBManager/ApqDBManager.csproj
+++ b/ApqDBManager/ApqDBManager/ApqDBManager.csproj
@@ -455,20 +455,13 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Res\ico\Text.ico" />
-    <Content Include="_Doc\安装说明.txt">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="_Doc\计划.txt" />
-    <Content Include="_Doc\说明.txt">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
     <None Include="Apq.DBC.dll.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="ApqDBManager[冰川].reg">
+    <None Include="ApqDBManager[BinChuan].reg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="ApqDBManager[雪羽].reg">
+    <None Include="ApqDBManager[XueYu].reg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="Forms\ErrList_XSD.xsc">
@@ -499,6 +492,9 @@
       <ProductName>Windows Installer 3.1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="_Doc\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
