--- a/Apq/Apq.Win/Apq.Win.csproj
+++ b/Apq/Apq.Win/Apq.Win.csproj
@@ -289,6 +289,7 @@
     </Compile>
     <Compile Include="Windows\Forms\SingletonForms.cs">
     </Compile>
+    <Compile Include="Windows\Forms\ToolStripProgressBar.cs" />
     <Compile Include="Windows\Interfaces\IWizardStep.cs" />
   </ItemGroup>
   <ItemGroup>
