--- a/TreeListView/TreeListView/TreeListView2002.csproj
+++ b/TreeListView/TreeListView/TreeListView2002.csproj
@@ -188,12 +188,12 @@ xcopy "$(ProjectDir)..\..\Reference\TreeListView\System.Runtime.InteropServices.
 
 :End
 </PreBuildEvent>
-    <PostBuildEvent>:xcopy "%25Reference%25\Res\$(ProjectName)" "$(TargetDir)Res\" /c /q /g /h /r /k /y /e
+    <PostBuildEvent>:xcopy "$(ProjectDir)..\..\Reference\Res\$(ProjectName)" "$(TargetDir)Res\" /c /q /g /h /r /k /y /e
 
-xcopy "$(TargetPath)" "%25Reference%25\TreeListView\" /c /q /g /h /r /k /y
-xcopy "$(TargetDir)$(TargetName).xml" "%25Reference%25\TreeListView\" /c /q /g /h /r /k /y
-:xcopy "$(TargetPath).config" "%25Reference%25\TreeListView\$(ConfigurationName)\Config\" /c /q /g /h /r /k /y
-:xcopy "$(ProjectDir)$(TargetFileName).apq" "%25Reference%25\TreeListView\$(ConfigurationName)\Config\" /c /q /g /h /r /k /y
+xcopy "$(TargetPath)" "$(ProjectDir)..\..\Reference\TreeListView\" /c /q /g /h /r /k /y
+xcopy "$(TargetDir)$(TargetName).xml" "$(ProjectDir)..\..\Reference\TreeListView\" /c /q /g /h /r /k /y
+:xcopy "$(TargetPath).config" "$(ProjectDir)..\..\Reference\TreeListView\$(ConfigurationName)\Config\" /c /q /g /h /r /k /y
+:xcopy "$(ProjectDir)$(TargetFileName).apq" "$(ProjectDir)..\..\Reference\TreeListView\$(ConfigurationName)\Config\" /c /q /g /h /r /k /y
 :End</PostBuildEvent>
   </PropertyGroup>
 </Project>
